# COG-sim2real-challenge

./: README.md  api_test.py  cog_agent.py  environment_linux.yml  environment_win.yml  icra2021.pgm  main.py  submit_test.py  test.py  test_linux.py  test_win.py
Cogenvdecoder/: LICENSE  README.md  pyproject.toml  setup.cfg
Cogenvdecoder/Cogenvdecoder/: CogEnvDecoder.py  UdpComms.py
identify/: apriltag_s.py  tagFamilies.py  tagUtils.py
planning/: bidirectional_a_star_costmap.py  speed_planner.py
