[metadata]
name = CogEnvDecoder
version = 0.1.29
author = Haoran Li
author_email = lihaoran2015@ia.ac.cn
description = For decoding observation data from Cog virtual environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1019388642/UnityEnvDataDecoder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

